--- a/css/style.css
+++ b/css/style.css
@@ -689,11 +689,16 @@ footer span:hover {
   max-width: 10%;
   max-height: 10%;
   border-radius: 50%;
-  background-color: rebeccapurple;
+  background-color: var(--bs-tertiary-color);
+  border-color: var(--bs-border-color);
   /* Ensures that this will go over the events section background */
   z-index: 10;
   display: grid;
   place-items: center;
   padding: 0;
   border: none;
+}
+
+.fab:hover {
+  background-color: var(--bs-secondary-color);
 }
